[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Michael Yoffe <myoffe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
click = "^8.1.3"
requests = "^2.28.2"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
